Fix Skills and Practices text position on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -700,7 +700,7 @@ h2.gray-underline:after {
 
 @media (max-width: 992px) {
     .practice-text {
-	max-width: 768px;
+	max-width: 60%;
     }
 }
 
